[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.dependencies]
tui-theme = { path = "./crates/tui-theme" }
tui-theme-derive = { path = "./crates/tui-theme-derive" }
proc-macro2 = "1"
quote = "1"
syn = "2"
manyhow = "0.11"
ratatui = { version = "0.29", default-features = false }
palette = "0.7.6"
serde = "1"
termprofile = { git = "https://github.com/aschey/termprofile", rev = "94c1e4997ca3eb1fe3195aa323caa12b94f59d19", features = [
  "ratatui",
] }
terminal-colorsaurus = "1"
serde_json = "1"
regex = "1"
anstyle = "1"
thiserror = "2"
bitflags = "2"
convert_case = "0.8"
proc-macro-crate = "3"
open = "5"
base64 = "0.22"
dialoguer = "0.12"
indexmap = "2"
termina = "0.1"

crossterm = "0.28"
anstyle-crossterm = "3"
color-eyre = "0.6"
itertools = "0.14"
strum = "0.27"
unicode-width = "0.2"
time = "0.3"
