[workspace]
members = ["crates/*", "examples", "tests"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aschey/tui-theme"
homepage = "https://github.com/aschey/tui-theme"

[workspace.dependencies]
tui-theme = { path = "./crates/tui-theme" }
tui-theme-derive = { path = "./crates/tui-theme-derive" }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.87"
manyhow = "0.11"
ratatui = { version = "0.29", default-features = false }
palette = "0.7.6"
serde = "1.0.134"
termprofile = "0.1"
terminal-colorsaurus = "1"
serde_json = "1"
regex = "1.11"
anstyle = "1"
thiserror = "2"
bitflags = "2.4"
convert_case = "0.8"
proc-macro-crate = "3.2"
open = "5"
base64 = "0.22"
dialoguer = "0.12"
indexmap = "2"
termina = "0.1"
confique = "0.4"

crossterm = "0.28"
anstyle-crossterm = "3"
color-eyre = "0.6"
itertools = "0.14"
strum = "0.27"
unicode-width = "0.2"
time = "0.3.11"
rstest = "0.26"
