[package]
name = "tui-theme-examples"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true, features = ["widget-calendar", "crossterm"] }
color-eyre = { workspace = true }
itertools = { workspace = true }
palette = { workspace = true }
crossterm = { workspace = true }
strum = { workspace = true, features = ["derive"] }
unicode-width = { workspace = true }
time = { workspace = true }
tui-theme = { workspace = true, features = ["serde"] }
termprofile = { workspace = true, features = ["terminfo", "query-detect"] }
confique = { workspace = true, features = ["toml"] }
