[package]
name = "tui-theme"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true, features = ["palette"] }
tui-theme-derive = { workspace = true }
palette = { workspace = true, features = ["serializing"] }
serde = { workspace = true, features = ["derive"] }
term-color-adapter = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anstyle = { workspace = true }
terminal-colorsaurus = { workspace = true }
