[package]
name = "tui-theme-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
manyhow = { workspace = true }
proc-macro-crate = { workspace = true }
itertools = { workspace = true }
