[package]
name = "tui-theme-util"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tui-theme = { workspace = true }
regex = { workspace = true }
palette = { workspace = true }
convert_case = { workspace = true }
