[package]
name = "tui-theme-util"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tui-theme = { workspace = true }
regex = { workspace = true }
palette = { workspace = true }
convert_case = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
anstyle = { workspace = true }
anstyle-crossterm = { workspace = true }
indexmap = { workspace = true }
